feat: Implement CRUD operations for application data items
This commit introduces the functionality to manage data items (recipes)
within an application's dataset.

Backend:
- Added RecipeEntity, RecipeRepository, RecipeService, and RecipeController.
- RecipeController exposes REST endpoints at /api/datasets/{datasetId}/items
  for CRUD operations on recipes.
- Access control is enforced at the service layer, ensuring users can only
  manage recipes within datasets they own.
- Corrected Java version in pom.xml from 24 to 17 for compatibility.
- Fixed usage of List.getFirst() to List.get(0) for Java 17 compatibility
  in KeycloakDebugTokenHeaderFilter.

Frontend:
- Updated DatasetApi.ts to correctly target the new backend endpoints
  by changing DATASET_API_BASE_URL to '/api/datasets'.
- Existing components (ApplicationDatasetEditor) are leveraged for UI.
- Verified payload compatibility between frontend and backend.

A manual testing plan (MANUAL_TESTING_PLAN.md) has also been prepared
to guide your verification of these new features and existing application
management.